--- a/statements/01_convex_hull/convexhull.tex
+++ b/statements/01_convex_hull/convexhull.tex
@@ -1,14 +1,16 @@
-\begin{problem}{Выпуклая оболочка}{input.txt}{output.txt}{2 секунды}{256 мегабайт}
+\begin{problem}{Выпуклая оболочка}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Выпуклой комбинацией множества точек $x_i$ называется линейная комбинация вида $\sum\limits_i \alpha_i x_i$, где $\alpha_i$ положительные вещественные числа, такие, что $\sum\limits_i \alpha_i = 1$. Все возможные выпуклые комбинации множества задают так называемую выпуклую оболочку множества. В данной задаче требуется найти выпуклую оболочку конечного множества точек, перечисленных во входном файле.
+Выпуклой комбинацией множества точек $x_i$ называется линейная комбинация вида $\sum_i \alpha_i x_i$, где $\alpha_i$ — положительные вещественные числа, для которых $\sum_i \alpha_i = 1$. Все возможные выпуклые комбинации множества задают так называемую выпуклую оболочку. В данной задаче требуется найти выпуклую оболочку конечного множества точек, перечисленных во входном файле.
 
 \InputFile
 
-На первой строчке входного файла записано число $n$ — количество точек в множестве. Далее на $n$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты элементов множества на плоскости.
+На первой строчке входного файла записано число $n$ — количество точек в множестве. На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты элементов множества на плоскости.
 
 \OutputFile
 
-Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник с вершинами в элементах множества, то для её задания достаточно перечислить номера элементов в порядке обхода. На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки, в порядке обхода. Нумерация точек задаётся в порядке следования их координат во входном файле, начиная с единицы.
+Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник с вершинами в элементах множества, то для её задания достаточно перечислить номера элементов, являющихся вершинами многоугольника.
+
+На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки. Номера требуется вывести в порядке обхода. Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
 
 \Examples
 
