traversal order fixed because of karlicos's complaint

--- a/statements/01_convex_hull/convexhull.tex
+++ b/statements/01_convex_hull/convexhull.tex
@@ -10,7 +10,7 @@
 
 Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник с вершинами в элементах множества, то для её задания достаточно перечислить номера элементов, являющихся вершинами многоугольника.
 
-На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки. Номера требуется вывести в порядке обхода. Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
+На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки. Номера требуется вывести в порядке обхода против часовой стрелки. Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
 
 \Examples
 
