--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Инструкции как у Димы Гесимова
+Инструкции как у Димы Гесимова, за исключением имени проекта
 Идем в корень репозитория
 $ mkdir bin
 $ cd bin
 $ cmake ..
-$ ./convexhull-checker infile outputfile
+$ ./polygonalchain-checker infile outputfile
 Вернет 0, если ответ правильный и 1, если ответ неправильный.
