--- a/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -1,10 +1,14 @@
 \begin{problem}{Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Полигональная цепь — упорядоченное множество отрезков, начало каждого следующего совпадает с предыдущим.
+Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
+чтобы расстояние от исходной цепи до получившейся было не больше $\varepsilon$.
+
 
 \InputFile
 
-На первой строчке входного файла записано число $n$ — количество отрезков в множестве.
+На первой строчке входного файла записано число $\varepsilon$.
+Во второй строчке $n$ — количество отрезков в множестве.
 На последующих $n + 1$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты концов отрезков.
 
 \OutputFile
