--- a/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -8,29 +8,34 @@
 \InputFile
 
 На первой строчке входного файла записано число $\varepsilon$.
-Во второй строчке $n$ — количество отрезков в множестве.
-На последующих $n + 1$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты концов отрезков.
+Во второй строчке $n$ — количество вершин полигональной цепи.
+На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты вершин.
 
 \OutputFile
 
-На первой строке выходного файла выведите $m$ — количество точек в упрощенной полигональной цепи.
-На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки.
+На первой строке выходного файла выведите $m$ — количество вершин в упрощенной полигональной цепи.
+На второй строке через пробел выведите $m$ чисел — номера вершин, используемых в упрощенной полигональной цепи.
 Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
 
 \Examples
 
 \begin{example}%
 \exmp{
+1.4142135
 5
-0.0 0.0
-0.0 1.0
-1.0 0.0
-1.0 1.0
-0.5 0.5
+0 0
+3 2
+5 4
+2 5
+0 8
 }{
-4
-1 2 4 3
+3
+1 2 5
 }%
 \end{example}
 
+Пояснение к примеру:
+	\begin{center}
+		\includegraphics{picture.eps}
+	\end{center}
 \end{problem}
