--- a/statements/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/statements/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -7,9 +7,9 @@
 
 \InputFile
 
-На первой строчке входного файла записано число $\varepsilon$.
-Во второй строчке $n$ — количество вершин полигональной цепи.
+На первой строке входного файла $n$ — количество вершин полигональной цепи.
 На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты вершин.
+В последней строке записано число $\varepsilon$.
 
 \OutputFile
 
@@ -21,13 +21,13 @@
 
 \begin{example}%
 \exmp{
-1.4142135
 5
 0 0
 3 2
 5 4
 2 5
 0 8
+1.4142135
 }{
 3
 1 2 5
