--- a/statements/01-convex_hull/convex_hull.tex
+++ b/statements/01-convex_hull/convex_hull.tex
@@ -1,4 +1,4 @@
-\begin{problem}{Выпуклая оболочка}{standard input}{standard output}{2 секунды}{256 мегабайт}
+\begin{problem}{01. Выпуклая оболочка точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Выпуклой комбинацией множества точек $x_i$ называется линейная комбинация вида $\sum_i \alpha_i x_i$, где $\alpha_i$ — положительные вещественные числа, для которых $\sum_i \alpha_i = 1$. Все возможные выпуклые комбинации множества задают так называемую выпуклую оболочку. В данной задаче требуется найти выпуклую оболочку конечного множества точек, перечисленных во входном файле.
 
