--- a/statements/01-convex_hull/statement.tex
+++ b/statements/01-convex_hull/statement.tex
@@ -12,7 +12,7 @@
 
 
 \contest{
-Вычислительная геометрия, задание A
+Вычислительная геометрия
 }{
 СПбГУ ИТМО
 }{
@@ -31,6 +31,6 @@
 
 \begin{document}
 
-\input convexhull.tex   
+\input convex_hull.tex   
 
 \end{document}
