--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -1,4 +1,4 @@
-\begin{problem}{Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
+\begin{problem}{09. Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Полигональная цепь — упорядоченное множество отрезков, начало каждого следующего совпадает с предыдущим.
 Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
