--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -14,8 +14,8 @@
 \OutputFile
 
 На первой строке выходного файла выведите $m$ — количество вершин в упрощенной полигональной цепи.
-На второй строке через пробел выведите $m$ чисел — номера вершин, используемых в упрощенной полигональной цепи.
-Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
+На второй строке через пробел выведите $m$ чисел — номера вершин, используемых в упрощенной полигональной цепи, в возрастающем порядке.
+Нумерация точек начинается с {\bfseries нуля} и задаётся в порядке следования их координат во входном файле.
 
 \Examples
 
@@ -30,7 +30,7 @@
 1.4142135
 }{
 3
-1 2 5
+0 1 4
 }%
 \end{example}
 \Note
