--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -1,6 +1,6 @@
 \begin{problem}{09. Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Полигональная цепь — упорядоченное множество отрезков, начало каждого следующего совпадает с предыдущим.
+Полигональная цепь — упорядоченное множество точек, последовательно соединенных отрезками.
 Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
 чтобы расстояние от исходной цепи до получившейся было не больше $\varepsilon$.
 
@@ -15,7 +15,7 @@
 
 На первой строке выходного файла выведите $m$ — количество вершин в упрощенной полигональной цепи.
 На второй строке через пробел выведите $m$ чисел — номера вершин, используемых в упрощенной полигональной цепи, в возрастающем порядке.
-Нумерация точек начинается с {\bfseries нуля} и задаётся в порядке следования их координат во входном файле.
+Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
 
 \Examples
 
@@ -30,7 +30,7 @@
 1.4142135
 }{
 3
-0 1 4
+1 2 5
 }%
 \end{example}
 \Note
