--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/README
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/README
@@ -1,7 +1,6 @@
-Инструкции как у Димы Гесимова, за исключением имени проекта
 Идем в корень репозитория
 $ mkdir bin
 $ cd bin
 $ cmake ..
-$ ./polygonalchain-checker infile outputfile
+$ ./polygonalchain-checker infile outfile
 Вернет 0, если ответ правильный и 1, если ответ неправильный.
