--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/olymp.sty
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/olymp.sty
@@ -293,12 +293,12 @@
 \end{center}}%
 }
 
-%\renewcommand{\@oddfoot}{%
-%\parbox{\textwidth}{%
-%\hrule%
-%\vspace{6pt}%
-%\sffamily{{\hfil}\kw@page\ \thepage\ \kw@of\ \pageref{LastPage}\hfil}}%
-%}%
+\renewcommand{\@oddfoot}{%
+\parbox{\textwidth}{%
+\hrule%
+\vspace{6pt}%
+\sffamily{{\hfil}\kw@page\ \thepage\ \kw@of\ \pageref{LastPage}\hfil}}%
+}%
 
 \makeatother
  
