--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -1,9 +1,8 @@
-\begin{problem}{09. Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
+\begin{problem}{09. Упрощение полигональной цепи}{douglaspeucker.in}{douglaspeucker.out}{2 секунды}{256 мегабайт}
 
 Полигональная цепь — упорядоченное множество точек, последовательно соединенных отрезками.
 Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
 чтобы расстояние от исходной цепи до получившейся было не больше $\varepsilon$.
-
 
 \InputFile
 
@@ -30,7 +29,7 @@
 1.4142135
 }{
 3
-1 2 5
+1 3 5
 }%
 \end{example}
 \Note
