--- a/cg2012.1/statements/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
+++ b/cg2012.1/statements/09-polyline_simplification_no_topology_preservation/simplifyingpolyline.tex
@@ -1,4 +1,4 @@
-\begin{problem}{09. Упрощение полигональной цепи}{douglaspeucker.in}{douglaspeucker.out}{2 секунды}{256 мегабайт}
+\begin{problem}{09. Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Полигональная цепь — упорядоченное множество точек, последовательно соединенных отрезками.
 Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
