--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -1,31 +1,44 @@
-\begin{problem}{01. Выпуклая оболочка точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
+\begin{problem}{11. Диаметр множества точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Выпуклой комбинацией множества точек $x_i$ называется линейная комбинация вида $\sum_i \alpha_i x_i$, где $\alpha_i$ — положительные вещественные числа, для которых $\sum_i \alpha_i = 1$. Все возможные выпуклые комбинации множества задают так называемую выпуклую оболочку. В данной задаче требуется найти выпуклую оболочку конечного множества точек, перечисленных во входном файле.
+Диаметром множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества.
+$$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 
 \InputFile
 
-На первой строчке входного файла записано число $n$ — количество точек в множестве. На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты элементов множества на плоскости.
+На первой строчке входного файла записано число $n \le 50000$ — количество точек в множестве. На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i), |x_i| , |y_i| \le 10000$, задающие координаты точек $X_i$ на плоскости.
 
 \OutputFile
+Для того, чтобы не выводить диаметр явно, достаточно вывести такие индексы $m$ и $k$, что расстояние между $X_m$ и $X_k$ максимально.
 
-Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник с вершинами в элементах множества, то для её задания достаточно перечислить номера элементов, являющихся вершинами многоугольника.
-
-На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки. Номера требуется вывести в порядке обхода против часовой стрелки. Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
+В единственной строке выходного файла выведите пару таких индексов (индексация — с 1).
 
 \Examples
 
 \begin{example}%
 \exmp{
 5
-0.0 0.0
-0.0 1.0
-1.0 0.0
-1.0 1.0
-0.5 0.5
+-1 1
+2 2
+3 0
+0 -1
+-2 3
 }{
-4
-3 4 2 1
+5 3
 }%
 \end{example}
+
+\begin{example}
+\exmp{
+4
+-2 -1
+3 2
+2 -2
+-1 3
+}{
+1 2    
+}%
+\end{example}
+
+Примечание: ответ “3 4” также верен.
 
 \end{problem}
