--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -1,16 +1,21 @@
 \begin{problem}{11. Диаметр множества точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Диаметром множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества.
+Диаметром $D$ множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества.
 $$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 
 \InputFile
 
-На первой строчке входного файла записано число $n \le 50000$ — количество точек в множестве. На последующих $n$ строчках записаны пары вещественных чисел $(x_i, y_i), |x_i| , |y_i| \le 10000$, задающие координаты точек $X_i$ на плоскости.
+На первой строчке входного файла записано число $n \le 50000$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i), |x_i| , |y_i| \le 10000$, задающие координаты точек $X_i$ на плоскости.
 
 \OutputFile
-Для того, чтобы не выводить диаметр явно, достаточно вывести такие индексы $m$ и $k$, что расстояние между $X_m$ и $X_k$ максимально.
+В выходной файл выведите координаты точек, расстояние между которыми равно диаметру. Если таких точек несколько, выберите минимальную пару.
 
-В единственной строке выходного файла выведите пару таких индексов (индексация — с 1).
+Пара точек $(a, b)$ меньше пары точек $(c, d)$, если \\
+$x_a < x_b$, или \\
+$x_a = x_b$ и $y_a < y_b$, или \\
+$x_a = x_b$ и $y_a = y_b$ и $x_c < x_d$, или \\
+$x_a = x_b$ и $y_a = y_b$ и $x_c = x_d$ и $y_c < y_d$, \\
+где между каждой парой координат — вещественное сравнение.
 
 \Examples
 
@@ -23,7 +28,8 @@ $$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 0 -1
 -2 3
 }{
-5 3
+-2 3
+3 0
 }%
 \end{example}
 
@@ -35,10 +41,11 @@ $$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 2 -2
 -1 3
 }{
-1 2    
+-2 -1
+3 2    
 }%
 \end{example}
 
-Примечание: ответ “3 4” также верен.
+Примечание: ответ “-1 3 2 -2” также верен, но он больше ответа “-2 -1 3 2”.
 
 \end{problem}
