--- a/cg2012.1/statements/01-convex_hull/convex_hull.tex
+++ b/cg2012.1/statements/01-convex_hull/convex_hull.tex
@@ -8,9 +8,9 @@
 
 \OutputFile
 
-Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник с вершинами в элементах множества, то для её задания достаточно перечислить номера элементов, являющихся вершинами многоугольника.
+Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник (возможно, вырожденный), то для её задания достаточно перечислить точки, являющихся вершинами многоугольника.
 
-На первой строке выходного файла выведите $m$ — количество точек в многоугольнике. На второй строке через пробел выведите $m$ чисел — номера точек, являющихся вершинами выпуклой оболочки. Номера требуется вывести в порядке обхода против часовой стрелки. Нумерация точек начинается с единицы и задаётся в порядке следования их координат во входном файле.
+На первой строке выходного файла выведите $m$ — количество вершин многоугольника. Количество точек должно быть минимальным. Далее, на $m$ строчках выведите координаты точек, являющихся вершинами многоугольника в порядке обхода против часовой стрелки. 
 
 \Examples
 
@@ -24,7 +24,10 @@
 0.5 0.5
 }{
 4
-3 4 2 1
+0.0 0.0
+1.0 0.0
+1.0 1.0
+0.0 1.0
 }%
 \end{example}
 
