--- a/cg2012.1/statements/04_point_in_general_polygon/point_in_general_polygon.tex
+++ b/cg2012.1/statements/04_point_in_general_polygon/point_in_general_polygon.tex
@@ -1,21 +1,26 @@
 \begin{problem}{04. Принадлежность точки произвольному многоугольнику}{standard
 input}{standard output}{2 секунды}{256 мегабайт}
 
-Задан некоторый многоугольник и точка. Необходимо определить, принадлежит ли она
-этому многоугольнику.
+Задан некоторый произвольный многоугольник и точка в $R^2$. Необходимо
+определить, принадлежит ли она этому многоугольнику.
 
 \InputFile
 
-На первой строке входного файла --- координаты точки. На второй --- $n$,
-количество вершин многоугольника. В последующих $n$ строчках --- координаты
-вершин многоугольника. Затем $m$ --- количество дырок в многоугольнике. В
-последующих $m$ строчках сперва записано количество вершин в дырках, а затем
-координаты этих вершин. Порядок вершин многоугольника - против часовой стрелки,
-порядок вершин дырок - по часовой стрелке.
+Первая строка входного файла содержит два вещественных числа $(x, y)$ ---
+координаты точки. Вторая строка содержит целое число $n$ --- количество вершин
+многоугольника. В последующих $n$ строчках содержатся пары
+вещественных чисел $(x_i, y_i)$ --- координаты $i$-ой вершины многоугольника.
+В следующей строке содержится целое число $m$ --- количество дырок в
+многоугольнике.
+В последующих $m$ строчках содержится число $m_j$ --- количество вершин в дырке,
+а затем $m_j$ пар вещественных чисел $(x_{m_j}, y_{m_j})$ --- координаты этих
+вершин.
+Вершины многоугольника заданы в порядке обхода против часовой стрелки, вершины дырок - по часовой стрелке.
 
 \OutputFile
 
-Выведите 1, если точка внутри прямоугольника, 0 --- на границе, -1 --- снаружи.
+В выходной файл выведите 1, если точка внутри прямоугольника, 0 --- на границе,
+-1 --- снаружи.
 
 \Examples
 
