--- a/cg2012.1/statements/08-points_in_cell_general/points_in_cell_general.tex
+++ b/cg2012.1/statements/08-points_in_cell_general/points_in_cell_general.tex
@@ -1,30 +1,35 @@
 \begin{problem}{08. Поиск множества точек d-мерного пространства, попавших в
 ячейку пространства}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Ячейкой (англ. cell) размерности $d$ называется максимальная связная область в $R^d$, не пересекаемая ни одной
-гиперплоскостью.
+Ячейкой $C$ размерности $d$ назовем следующее множество точек пространства
+$R^d$:
+$$C = [a_1, b_1) \times [a_2, b_2) \times \ldots \times [a_d, b_d)$$
 
-Задана ячейка и точки $d$-мерного пространства.
-Необходимо определить, какие из них лежат внутри данной ячейки.
+Дана ячейка и точки пространства $R^d$. Необходимо определить, какие из них
+лежат внутри данной ячейки.
 
 \InputFile
 
-Первая строка входного файла содержит $d$ --- размерность пространства. На
-второй - пары из левой нижней координаты и длины стороны. В оставшихся строчках
-записаны координаты точек.
+Первая строка входного файла содержит целое число $d$ --- размерность
+пространства. Вторая строка содержит $a_1, a_2 \ldots a_d$ --- координаты точек,
+задающих ячейку. Третья строка содержит $d$ вещественных неотрицательных чисел
+$l_1, l_2 \ldots l_d$ --- длины сторон ячейки. Остальные строчки содержат по $d$
+чисел --- координаты точек.
 
 \OutputFile
 
-На первой строке выходного файла выведите $n$ --- количество точек, попавших в
+В первую строку выходного файла выведите целое число $n$ --- количество точек, попавших в
 ячейку.
-В следующей строке укажите номера этих точек. Нумерация начинается с единицы.
+В следующей строке укажите номера этих точек. Точки нумеруются с единицы  в
+порядке появления во входных данных.
 
 \Examples
 
 \begin{example}%
 \exmp{
 2
-0 2 0 2
+0 0
+2 2
 0 8
 1 6
 1.5 1.5
