--- a/cg2012.1/statements/04_point_in_general_polygon/point_in_general_polygon.tex
+++ b/cg2012.1/statements/04_point_in_general_polygon/point_in_general_polygon.tex
@@ -1,8 +1,8 @@
 \begin{problem}{04. ѕринадлежность точки произвольному многоугольнику}{standard
 input}{standard output}{2 секунды}{256 мегабайт}
 
-«адан некоторый произвольный многоугольник и точка в $R^2$. Ќеобходимо
-определить, принадлежит ли она этому многоугольнику.
+Ќа плоскости заданы точка и некоторый произвольный многоугольник с дырками.
+Ќеобходимо определить, принадлежит ли она этому многоугольнику.
 
 \InputFile
 
@@ -12,15 +12,15 @@ input}{standard output}{2 секунды}{256 мегабайт}
 вещественных чисел $(x_i, y_i)$ --- координаты $i$-ой вершины многоугольника.
 ¬ следующей строке содержитс€ целое число $m$ --- количество дырок в
 многоугольнике.
-¬ последующих $m$ строчках содержитс€ число $m_j$ --- количество вершин в дырке,
-а затем $m_j$ пар вещественных чисел $(x_{m_j}, y_{m_j})$ --- координаты этих
-вершин.
+¬ последующих $m$ строчках содержитс€ информаци€ о дырках. ¬ $j$-ой строке
+содержитс€ число $m_j$ --- количество вершин в дырке, а затем $m_j$ пар
+вещественных чисел $(x_{m_j}, y_{m_j})$ --- координаты этих вершин.
 ¬ершины многоугольника заданы в пор€дке обхода против часовой стрелки, вершины дырок - по часовой стрелке.
 
 \OutputFile
 
-¬ выходной файл выведите 1, если точка внутри пр€моугольника, 0 --- на границе,
--1 --- снаружи.
+¬ выходной файл выведите $1$, если точка внутри пр€моугольника, $0$ --- на
+границе, $-1$ --- снаружи.
 
 \Examples
 
@@ -35,6 +35,20 @@ input}{standard output}{2 секунды}{256 мегабайт}
 0
 }{
 0
+}%
+\exmp{
+5 0.5
+3
+0 0
+10 0.5
+0 1
+1
+3
+0.1 0.1
+0.1 0.9
+9 0.5
+}{
+-1
 }%
 \end{example}
 \end{problem}
