--- a/cg2012.1/statements/08-points_in_cell_general/points_in_cell_general.tex
+++ b/cg2012.1/statements/08-points_in_cell_general/points_in_cell_general.tex
@@ -2,19 +2,21 @@
 €чейку пространства}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 ячейкой $C$ размерности $d$ назовем следующее множество точек пространства
-$R^d$:
-$$C = [a_1, b_1) \times [a_2, b_2) \times \ldots \times [a_d, b_d)$$
+$\mathbb R^d$:
+$C = [a_1, a_1 + l_1) \times [a_2, a_2 + l_2) \times \ldots \times [a_d, a_d
++ l_d),$
+где $a_i$ --- координаты точки, задающей €чейку, а $l_i$ --- длины сторон
+€чейки.
 
-ƒана €чейка и точки пространства $R^d$. Ќеобходимо определить, какие из них
-лежат внутри данной €чейки.
+ƒана €чейка и точки пространства $\mathbb R^d$. Ќеобходимо определить, какие из
+них лежат внутри данной €чейки.
 
 \InputFile
 
 ѕерва€ строка входного файла содержит целое число $d$ --- размерность
-пространства. ¬тора€ строка содержит $a_1, a_2 \ldots a_d$ --- координаты точек,
-задающих €чейку. “реть€ строка содержит $d$ вещественных неотрицательных чисел
-$l_1, l_2 \ldots l_d$ --- длины сторон €чейки. ќстальные строчки содержат по $d$
-чисел --- координаты точек.
+пространства. ¬тора€ строка содержит $a_1, a_2, \ldots a_d$ --- координаты
+точки, задающих €чейку. “реть€ строка содержит $d$ вещественных чисел $l_1, l_2, \ldots l_d$ --- длины сторон €чейки. ќстальные строчки содержат по
+$d$ чисел --- координаты точек.
 
 \OutputFile
 
@@ -39,6 +41,19 @@ $l_1, l_2 \ldots l_d$ --- длины сторон €чейки. ќстальные строчки содержат по $d$
 }{
 3
 3 4 6
+}%
+\exmp{
+3
+0 0 0
+3 3 3
+1 1 1
+68 37.5 100
+0 0 0
+1.5 0.5 2
+3.5 3.1 3.2
+}{
+3
+1 3 4
 }%
 \end{example}
 \end{problem}
