--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -8,14 +8,7 @@ $$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 На первой строчке входного файла записано число $n \le 50000$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i), |x_i| , |y_i| \le 10000$, задающие координаты точек $X_i$ на плоскости.
 
 \OutputFile
-В выходной файл выведите координаты точек, расстояние между которыми равно диаметру. Если таких точек несколько, выберите минимальную пару.
-
-Пара точек $(a, b)$ меньше пары точек $(c, d)$, если \\
-$x_a < x_b$, или \\
-$x_a = x_b$ и $y_a < y_b$, или \\
-$x_a = x_b$ и $y_a = y_b$ и $x_c < x_d$, или \\
-$x_a = x_b$ и $y_a = y_b$ и $x_c = x_d$ и $y_c < y_d$, \\
-где между каждой парой координат — вещественное сравнение.
+В выходной файл выведите координаты двух точек, принадлежащих заданному множеству, расстояние между которыми равно диаметру.
 
 \Examples
 
@@ -41,11 +34,11 @@ $x_a = x_b$ и $y_a = y_b$ и $x_c = x_d$ и $y_c < y_d$, \\
 2 -2
 -1 3
 }{
--2 -1
-3 2    
+-1 3
+2 -2   
 }%
 \end{example}
 
-Примечание: ответ “-1 3 2 -2” также верен, но он больше ответа “-2 -1 3 2”.
+Примечание: ответ “-2 -1 3 2” также верен.
 
 \end{problem}
