--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -5,7 +5,7 @@ $$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
 
 \InputFile
 
-На первой строчке входного файла записано число $n: 1 \le n \le 50000$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $X_i$ на плоскости.
+На первой строчке входного файла записано число $n$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $X_i$ на плоскости.
 
 \OutputFile
 В выходной файл выведите координаты двух точек, принадлежащих заданному множеству, расстояние между которыми равно диаметру.
