--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -1,14 +1,14 @@
 \begin{problem}{11. Диаметр множества точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Диаметром $D$ множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества.
-$$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$.
+Диаметром $D$ множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества:
+$$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$
 
 \InputFile
 
 На первой строчке входного файла записано число $n$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $X_i$ на плоскости.
 
 \OutputFile
-В выходной файл выведите координаты двух точек, принадлежащих заданному множеству, расстояние между которыми равно диаметру.
+В выходной файл выведите координаты двух точек, принадлежащих заданному множеству, расстояние между которыми равно диаметру. Если таких пар точек несколько, выведите любую.
 
 \Examples
 
