--- a/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
+++ b/cg2012.1/statements/11-point_set_diameter/point_set_diameter.tex
@@ -1,7 +1,7 @@
 \begin{problem}{11. Диаметр множества точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Диаметром $D$ множества точек $X$ называется максимальное попарное расстояние между всеми различными точками этого множества:
-$$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b) $$
+$$ D = \max\limits_{a, b \in X} \operatorname{distance}(a, b). $$
 
 \InputFile
 
