--- a/cg2012.1/checkers/01-convex_hull/readme
+++ b/cg2012.1/checkers/01-convex_hull/readme
@@ -4,3 +4,5 @@ $ cd bin
 $ cmake ..
 $ ./convexhull-checker infile outfile
 Вернет 0, если ответ правильный и 1, если ответ неправильный.
+
+В папке performance_tests есть генератор больших тестов. Если его просто запустить, сгенерирует три теста. В репозиторий тесты закидывать не стал, ибо они по 9 мегабайт. 
