--- a/cg2012.1/statements/32-orientation/orientation.tex
+++ b/cg2012.1/statements/32-orientation/orientation.tex
@@ -11,15 +11,19 @@ $
 
 \InputFile
 
-В трех строках входного файла заданы пары вещественных чисел — координаты точек $a$, $b$ и $c$. Гарантируется, что точки $a$ и $b$ не совпадают.
+В первой строке входного файла задано натуральное число $n$ — количество тестов. \\
+В следующих $3n$ строках входного файла заданы пары вещественных чисел — координаты точек $a$, $b$ и $c$. Гарантируется, что точки $a$ и $b$ не совпадают. \\
+Примечание: во всех тестах на корректность $n = 1$. Мультитест сделан для удобства тестирования на производительность.
+
 
 \OutputFile
-В выходной файл выведите значение предиката для заданых точек.
+В выходной файл через пробел выведите $n$ чисел — значений предиката для заданых точек.
 
 \Examples
 
 \begin{example}%
 \exmp{
+1
 2 1.5
 0.5 0.5
 3.5 2.5
@@ -30,6 +34,7 @@ $
 
 \begin{example}%
 \exmp{
+1
 2 1.5
 0.5 0.5
 1.234 0.1123
@@ -40,6 +45,7 @@ $
 
 \begin{example}%
 \exmp{
+1
 2 1.5
 0.5 0.5
 5.21341 324124.5
