--- a/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
+++ b/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
@@ -1,6 +1,6 @@
 \begin{problem}{19. Ближайший сосед}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-На плоскости задано множество $S$, состоящее из $n$ точек. Далее поступает $m$ точек-запросов, для каждого запроса $q_i$ надо вывести ближайшую к нему в евклидовой метрике точку $p \in S$.
+На плоскости задано множество $S$, состоящее из $n$ точек. Далее поступает $m$ точек-запросов, для каждого запроса $q_i$ надо вывести ближайшую к нему в евклидовой метрике точку $s \in S$.
 
 \InputFile
 
@@ -21,12 +21,12 @@
 4 4
 3
 3 3
-3 -1000
-0 0
+3 -100
+4 4
 }{
 2 2
 4 2
-2 2
+4 4
 }%
 \end{example}
 
