--- a/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
+++ b/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
@@ -4,8 +4,8 @@
 
 \InputFile
 
-На первой строчке входного файла записано число $n$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $s_i$ на плоскости. \\
-На следующей строчке записано число $m$ — количество запросов. На последующих $m$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $q_i$ на плоскости. 
+На первой строчке входного файла записано натуральное число $n$ — количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $s_i$ на плоскости. \\
+На следующей строчке записано натуральное число $m$ — количество запросов. На последующих $m$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающие координаты точек $q_i$ на плоскости. 
 
 \OutputFile
 В выходной файл выведите $m$ точек — ближайшую для каждого запроса точку. Если ближайших точек несколько, выведите любую.
