--- a/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
+++ b/cg2012.1/statements/19-nearest_neighbour/nearest_neighbour.tex
@@ -1,6 +1,6 @@
 \begin{problem}{19. Ближайший сосед}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-На плоскости задано множество $S$, состоящее из $n$ точек. Далее поступает $m$ точек-запросов, для каждого запроса $q_i$ надо вывести ближайшую к нему в евклидовой метрике точку $s \in S$.
+На плоскости задано множество $S$, состоящее из $n$ точек. Далее поступает $m$ точек-запросов, для каждого запроса $q_i$ выведите ближайшую к нему в евклидовой метрике точку $s \in S$.
 
 \InputFile
 
