--- a/cg2012.1/statements/09-polyline_simplification_no_topology_preservation/statement2.tex
+++ b/cg2012.1/statements/09-polyline_simplification_no_topology_preservation/statement2.tex
@@ -5,12 +5,13 @@
 \usepackage[english,russian]{babel}
 \usepackage[russian]{olymp}
 \usepackage{graphics}
+\usepackage{tikz}
+\usetikzlibrary{calc}
 \usepackage{wrapfig}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{epigraph}
 \usepackage{lastpage}
-
 \contest{
 Вычислительная геометрия
 }{
