--- a/cg2012.1/08-points_in_cell_general/statement/points_in_cell_general.tex
+++ b/cg2012.1/08-points_in_cell_general/statement/points_in_cell_general.tex
@@ -15,7 +15,7 @@ $C = [a_1, a_1 + l_1) \times [a_2, a_2 + l_2) \times \ldots \times [a_d, a_d
 
 ѕерва€ строка входного файла содержит целое число $d$ --- размерность
 пространства. ¬тора€ строка содержит $a_1, a_2, \ldots a_d$ --- координаты
-точки, задающих €чейку. “реть€ строка содержит $d$ вещественных чисел $l_1, l_2, \ldots l_d$ --- длины сторон €чейки. ќстальные строчки содержат по
+точки, задающих €чейку. “реть€ строка содержит $d$ вещественных чисел $l_1, l_2, \ldots l_d$ --- длины сторон €чейки. —ледующа€ строка содержит целое число $n$ --- количество точек. ќстальные $n$ строк содержат по
 $d$ чисел --- координаты точек.
 
 \OutputFile
@@ -32,6 +32,7 @@ $d$ чисел --- координаты точек.
 2
 0 0
 2 2
+6
 0 8
 1 6
 1.5 1.5
