--- a/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
+++ b/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
@@ -5,7 +5,7 @@
 Каждую точку нужно задать отрезками проходящими через нее.
 \InputFile
 В первой строке задано целое число $n$ -- количество отрезков.
-Следующие $n$ строк содержат по 4 вещественных числа — координаты начала и конца $i$-го отрезка.
+Следующие $n$ строк содержат по 4 вещественных числа -- координаты начала и конца $i$-го отрезка.
 
 \OutputFile
 В первую строку выведите число $m$ -- количество точек пересечения отрезков.
