--- a/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
+++ b/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
@@ -4,11 +4,11 @@
 При наложении считать только экстремальные точки этого наложения.
 Каждую точку нужно задать отрезками проходящими через нее.
 \InputFile
-В первой строке задано целое число $n$ -- количество отрезков.
-Следующие $n$ строк содержат по 4 вещественных числа -- координаты начала и конца $i$-го отрезка.
+В первой строке задано целое число $n$ --- количество отрезков.
+Следующие $n$ строк содержат по 4 вещественных числа --- координаты начала и конца $i$-го отрезка.
 
 \OutputFile
-В первую строку выведите число $m$ -- количество точек пересечения отрезков.
+В первую строку выведите число $m$ --- количество точек пересечения отрезков.
 В следующие $m$ строчек выведите количество отрезков образующих $i$-ую точки пересечения и номера отрезков этих отреков. Отрезки нумеруются с единицы в порядке появления в исходных данных.  
 \Examples
 
